// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TransactionMultisignatureStatus > should not render delegate icon 1`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionMultisignatureStatus"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Status
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="flex w-full items-center space-x-4"
        >
          <div
            class="hidden md:block"
          >
            Awaiting final signature
             
            by
          </div>
          <div
            class="hidden w-0 flex-1 overflow-auto text-right md:block md:text-left"
          >
            <div
              class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
            >
              <span
                class="font-semibold text-base text-theme-text"
                data-testid="Address__alias"
              >
                <span
                  class="no-ligatures css-9nx3be"
                  data-testid="TruncateEnd"
                >
                  ARK Wallet 1
                </span>
              </span>
              <span
                class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                data-testid="Address__address"
              >
                D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="w-full md:w-auto"
    >
      <div
        class="w-full text-right text-theme-secondary-700 dark:text-theme-secondary-500 md:hidden"
      >
        Awaiting final signature
         
        by
      </div>
      <div
        class="flex items-center -space-x-1"
      >
        <div
          class="w-full overflow-auto text-right md:hidden md:text-left"
        >
          <div
            class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-end"
          >
            <span
              class="font-semibold text-base text-theme-text"
              data-testid="Address__alias"
            >
              <span
                class="no-ligatures css-9nx3be"
                data-testid="TruncateEnd"
              >
                ARK Wallet 1
              </span>
            </span>
            <span
              class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
              data-testid="Address__address"
            >
              D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
            </span>
          </div>
        </div>
        <div
          class="border-theme-text text-theme-text dark:border-theme-secondary-600 dark:text-theme-secondary-600 ring-theme-background duration-100 css-1nqcsx"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="delegate-registration"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="2"
              >
                <path
                  d="M16.73 1L6.43 19"
                />
                <path
                  d="M6.73 6.9c1.4 0 2.7-1.1 2.7-2.7 0-1.5-1.2-2.7-2.7-2.7s-2.7 1.2-2.7 2.7h0c0 1.5 1.1 2.7 2.7 2.7zM8.63 9.8c-.6-.3-1.2-.5-1.9-.5-2.5 0-4.4 2-4.4 4.4M14.97 18.4c1.4 0 2.7-1.1 2.7-2.7 0-1.5-1.2-2.7-2.7-2.7s-2.7 1.2-2.7 2.7h0c0 1.5 1.1 2.7 2.7 2.7z"
                  stroke-linejoin="round"
                />
              </g>
            </svg>
          </div>
        </div>
        <div
          class="shrink-0 css-1n9jllj"
          data-testid="Avatar"
        >
          <div
            class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
          >
            <img
              alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
              src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
              title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionMultisignatureStatus > should render in lg 1`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionMultisignatureStatus"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Status
      </div>
      <div
        class="flex items-center font-semibold"
      >
        Awaiting our signature
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionMultisignatureStatus > should render in lg awaiting final signature 1`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionMultisignatureStatus"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Status
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="flex w-full items-center space-x-4"
        >
          <div
            class="hidden md:block"
          >
            Awaiting final signature
             
            by
          </div>
          <div
            class="hidden w-0 flex-1 overflow-auto text-right md:block md:text-left"
          >
            <div
              class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
            >
              <span
                class="font-semibold text-base text-theme-text"
                data-testid="Address__alias"
              >
                <span
                  class="no-ligatures css-9nx3be"
                  data-testid="TruncateEnd"
                >
                  ARK Wallet 1
                </span>
              </span>
              <span
                class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                data-testid="Address__address"
              >
                D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="w-full md:w-auto"
    >
      <div
        class="w-full text-right text-theme-secondary-700 dark:text-theme-secondary-500 md:hidden"
      >
        Awaiting final signature
         
        by
      </div>
      <div
        class="flex items-center -space-x-1"
      >
        <div
          class="w-full overflow-auto text-right md:hidden md:text-left"
        >
          <div
            class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-end"
          >
            <span
              class="font-semibold text-base text-theme-text"
              data-testid="Address__alias"
            >
              <span
                class="no-ligatures css-9nx3be"
                data-testid="TruncateEnd"
              >
                ARK Wallet 1
              </span>
            </span>
            <span
              class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
              data-testid="Address__address"
            >
              D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
            </span>
          </div>
        </div>
        <div
          class="shrink-0 css-1n9jllj"
          data-testid="Avatar"
        >
          <div
            class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
          >
            <img
              alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
              src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
              title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionMultisignatureStatus > should render in md 1`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionMultisignatureStatus"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Status
      </div>
      <div
        class="flex items-center font-semibold"
      >
        Awaiting our signature
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionMultisignatureStatus > should render in md awaiting final signature 1`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionMultisignatureStatus"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Status
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="flex w-full items-center space-x-4"
        >
          <div
            class="hidden md:block"
          >
            Awaiting final signature
             
            by
          </div>
          <div
            class="hidden w-0 flex-1 overflow-auto text-right md:block md:text-left"
          >
            <div
              class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
            >
              <span
                class="font-semibold text-base text-theme-text"
                data-testid="Address__alias"
              >
                <span
                  class="no-ligatures css-9nx3be"
                  data-testid="TruncateEnd"
                >
                  ARK Wallet 1
                </span>
              </span>
              <span
                class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                data-testid="Address__address"
              >
                D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="w-full md:w-auto"
    >
      <div
        class="w-full text-right text-theme-secondary-700 dark:text-theme-secondary-500 md:hidden"
      >
        Awaiting final signature
         
        by
      </div>
      <div
        class="flex items-center -space-x-1"
      >
        <div
          class="w-full overflow-auto text-right md:hidden md:text-left"
        >
          <div
            class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-end"
          >
            <span
              class="font-semibold text-base text-theme-text"
              data-testid="Address__alias"
            >
              <span
                class="no-ligatures css-9nx3be"
                data-testid="TruncateEnd"
              >
                ARK Wallet 1
              </span>
            </span>
            <span
              class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
              data-testid="Address__address"
            >
              D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
            </span>
          </div>
        </div>
        <div
          class="shrink-0 css-1n9jllj"
          data-testid="Avatar"
        >
          <div
            class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
          >
            <img
              alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
              src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
              title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionMultisignatureStatus > should render in sm 1`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionMultisignatureStatus"
  >
    <div
      class="items-top flex w-full justify-between space-x-4 md:items-center"
      data-testid="TransactionDetail--mobile"
    >
      <div
        class="text-md md:theme-text group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
      >
        Status
      </div>
      <div
        class="flex min-w-0 grow items-center justify-end space-x-4"
      >
        <div
          class="md:theme-text flex w-full justify-end text-theme-secondary-700 dark:text-theme-secondary-500"
        >
          Awaiting our signature
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionMultisignatureStatus > should render in sm awaiting final signature 1`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionMultisignatureStatus"
  >
    <div
      class="items-top flex w-full justify-between space-x-4 md:items-center"
      data-testid="TransactionDetail--mobile"
    >
      <div
        class="text-md md:theme-text group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
      >
        Status
      </div>
      <div
        class="flex min-w-0 grow items-center justify-end space-x-4"
      >
        <div
          class="md:theme-text flex w-full justify-end text-theme-secondary-700 dark:text-theme-secondary-500"
        >
          <div
            class="flex w-full items-center space-x-4"
          >
            <div
              class="hidden md:block"
            >
              Awaiting final signature
               
              by
            </div>
            <div
              class="hidden w-0 flex-1 overflow-auto text-right md:block md:text-left"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-end"
              >
                <span
                  class="font-semibold text-base text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="no-ligatures css-9nx3be"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="w-full md:w-auto"
        >
          <div
            class="w-full text-right text-theme-secondary-700 dark:text-theme-secondary-500 md:hidden"
          >
            Awaiting final signature
             
            by
          </div>
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="w-full overflow-auto text-right md:hidden md:text-left"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-end"
              >
                <span
                  class="font-semibold text-base text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="no-ligatures css-9nx3be"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
            <div
              class="shrink-0 css-1yk316i"
              data-testid="Avatar"
            >
              <div
                class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionMultisignatureStatus > should render in xl 1`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionMultisignatureStatus"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Status
      </div>
      <div
        class="flex items-center font-semibold"
      >
        Awaiting our signature
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionMultisignatureStatus > should render in xl awaiting final signature 1`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionMultisignatureStatus"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Status
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="flex w-full items-center space-x-4"
        >
          <div
            class="hidden md:block"
          >
            Awaiting final signature
             
            by
          </div>
          <div
            class="hidden w-0 flex-1 overflow-auto text-right md:block md:text-left"
          >
            <div
              class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
            >
              <span
                class="font-semibold text-base text-theme-text"
                data-testid="Address__alias"
              >
                <span
                  class="no-ligatures css-9nx3be"
                  data-testid="TruncateEnd"
                >
                  ARK Wallet 1
                </span>
              </span>
              <span
                class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                data-testid="Address__address"
              >
                D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="w-full md:w-auto"
    >
      <div
        class="w-full text-right text-theme-secondary-700 dark:text-theme-secondary-500 md:hidden"
      >
        Awaiting final signature
         
        by
      </div>
      <div
        class="flex items-center -space-x-1"
      >
        <div
          class="w-full overflow-auto text-right md:hidden md:text-left"
        >
          <div
            class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-end"
          >
            <span
              class="font-semibold text-base text-theme-text"
              data-testid="Address__alias"
            >
              <span
                class="no-ligatures css-9nx3be"
                data-testid="TruncateEnd"
              >
                ARK Wallet 1
              </span>
            </span>
            <span
              class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
              data-testid="Address__address"
            >
              D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
            </span>
          </div>
        </div>
        <div
          class="shrink-0 css-1n9jllj"
          data-testid="Avatar"
        >
          <div
            class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
          >
            <img
              alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
              src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
              title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionMultisignatureStatus > should render in xs 1`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionMultisignatureStatus"
  >
    <div
      class="items-top flex w-full justify-between space-x-4 md:items-center"
      data-testid="TransactionDetail--mobile"
    >
      <div
        class="text-md md:theme-text group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
      >
        Status
      </div>
      <div
        class="flex min-w-0 grow items-center justify-end space-x-4"
      >
        <div
          class="md:theme-text flex w-full justify-end text-theme-secondary-700 dark:text-theme-secondary-500"
        >
          Awaiting our signature
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionMultisignatureStatus > should render in xs awaiting final signature 1`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionMultisignatureStatus"
  >
    <div
      class="items-top flex w-full justify-between space-x-4 md:items-center"
      data-testid="TransactionDetail--mobile"
    >
      <div
        class="text-md md:theme-text group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
      >
        Status
      </div>
      <div
        class="flex min-w-0 grow items-center justify-end space-x-4"
      >
        <div
          class="md:theme-text flex w-full justify-end text-theme-secondary-700 dark:text-theme-secondary-500"
        >
          <div
            class="flex w-full items-center space-x-4"
          >
            <div
              class="hidden md:block"
            >
              Awaiting final signature
               
              by
            </div>
            <div
              class="hidden w-0 flex-1 overflow-auto text-right md:block md:text-left"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-end"
              >
                <span
                  class="font-semibold text-base text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="no-ligatures css-9nx3be"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="w-full md:w-auto"
        >
          <div
            class="w-full text-right text-theme-secondary-700 dark:text-theme-secondary-500 md:hidden"
          >
            Awaiting final signature
             
            by
          </div>
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="w-full overflow-auto text-right md:hidden md:text-left"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-end"
              >
                <span
                  class="font-semibold text-base text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="no-ligatures css-9nx3be"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
            <div
              class="shrink-0 css-1yk316i"
              data-testid="Avatar"
            >
              <div
                class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionMultisignatureStatus > should render with address 1`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionMultisignatureStatus"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Status
      </div>
      <div
        class="flex items-center font-semibold"
      >
        Awaiting our signature
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionMultisignatureStatus > should render with alias 1`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionMultisignatureStatus"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Status
      </div>
      <div
        class="flex items-center font-semibold"
      >
        Awaiting our signature
      </div>
    </div>
  </div>
</div>
`;
